@@ -1,8 +1,13 @@
 package com.skillmentor_backend.final_project.service;
 
-import com.skillmentor_backend.final_project.dto.CreateBookingRequest;
-import com.skillmentor_backend.final_project.dto.StudentDashboardResponse;
-import com.skillmentor_backend.final_project.entity.*;
+import com.skillmentor_backend.final_project.dto.ClassroomResponseDto;
+import com.skillmentor_backend.final_project.dto.CreateBookingRequestDto;
+import com.skillmentor_backend.final_project.dto.MentorSummaryDto;
+import com.skillmentor_backend.final_project.dto.StudentDashboardResponseDto;
+import com.skillmentor_backend.final_project.entity.Classroom;
+import com.skillmentor_backend.final_project.entity.Mentor;
+import com.skillmentor_backend.final_project.entity.Session;
+import com.skillmentor_backend.final_project.entity.SessionStatus;
 import com.skillmentor_backend.final_project.repository.ClassroomRepository;
 import com.skillmentor_backend.final_project.repository.MentorRepository;
 import com.skillmentor_backend.final_project.repository.SessionRepository;
@@ -13,7 +18,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,27 +29,39 @@ public class StudentServiceImpl implements StudentService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<Classroom> getAllClasses() {
-        return classroomRepository.findAll();
+    public List<ClassroomResponseDto> getAllClasses() {
+        // 1. Fetch the data using the existing query
+        List<Classroom> classrooms = classroomRepository.findAllWithMentors();
+
+        // 2. Map the entities to the new DTOs
+        return classrooms.stream()
+                .map(this::mapClassroomToDto)
+                .toList();
     }
 
     @Override
     @Transactional
-    public Session createBooking(CreateBookingRequest request, Jwt jwt) {
+    public Session createBooking(CreateBookingRequestDto request, Jwt jwt) {
         // Find the related entities
         Classroom classroom = classroomRepository.findById(request.getClassroomId())
-                .orElseThrow(() -> new EntityNotFoundException("Classroom not found"));
+                .orElseThrow(() -> new EntityNotFoundException("Classroom not found with id: " + request.getClassroomId()));
         Mentor mentor = mentorRepository.findById(request.getMentorId())
-                .orElseThrow(() -> new EntityNotFoundException("Mentor not found"));
+                .orElseThrow(() -> new EntityNotFoundException("Mentor not found with id: " + request.getMentorId()));
 
-        // Extract student info from the validated JWT
+        // --- CORRECTED NAME EXTRACTION ---
         String studentClerkId = jwt.getSubject();
-        String studentName = jwt.hasClaim("name") ? jwt.getClaimAsString("name") : "Student User";
+        String firstName = jwt.hasClaim("given_name") ? jwt.getClaimAsString("given_name") : "";
+        String lastName = jwt.hasClaim("family_name") ? jwt.getClaimAsString("family_name") : "";
+        String studentName = (firstName + " " + lastName).trim();
+        if (studentName.isEmpty()) {
+            studentName = "Student User"; // Fallback if no name claims are present
+        }
+        // --- END OF CORRECTION ---
 
         // Create and populate the new session
         Session session = new Session();
         session.setStudentClerkId(studentClerkId);
-        session.setStudentName(studentName);
+        session.setStudentName(studentName); // Use the correctly assembled name
         session.setClassroom(classroom);
         session.setMentor(mentor);
         session.setSessionDateTime(request.getSessionDateTime());
@@ -58,22 +74,48 @@ public class StudentServiceImpl implements StudentService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<StudentDashboardResponse> getStudentDashboard(Jwt jwt) {
+    public List<StudentDashboardResponseDto> getStudentDashboard(Jwt jwt) {
         String studentClerkId = jwt.getSubject();
         List<Session> sessions = sessionRepository.findByStudentClerkIdOrderBySessionDateTimeDesc(studentClerkId);
 
         return sessions.stream()
                 .map(this::mapSessionToStudentDashboardResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // Helper method to map a Session entity to the dashboard response DTO
-    private StudentDashboardResponse mapSessionToStudentDashboardResponse(Session session) {
-        StudentDashboardResponse dto = new StudentDashboardResponse();
+    private StudentDashboardResponseDto mapSessionToStudentDashboardResponse(Session session) {
+        StudentDashboardResponseDto dto = new StudentDashboardResponseDto();
         dto.setClassName(session.getClassroom().getName());
         dto.setMentorName(session.getMentor().getFirstName() + " " + session.getMentor().getLastName());
         dto.setSessionDate(session.getSessionDateTime());
         dto.setStatus(session.getStatus().name());
         return dto;
+    }
+
+    // Helper method to perform the mapping
+    private ClassroomResponseDto mapClassroomToDto(Classroom classroom) {
+        ClassroomResponseDto classroomDto = new ClassroomResponseDto();
+        classroomDto.setId(classroom.getId());
+        classroomDto.setName(classroom.getName());
+        classroomDto.setImageUrl(classroom.getImageUrl());
+
+        List<MentorSummaryDto> mentorDtos = classroom.getMentors().stream()
+                .map(this::mapMentorToSummaryDto)
+                .toList();
+
+        classroomDto.setMentors(mentorDtos);
+        return classroomDto;
+    }
+
+    private MentorSummaryDto mapMentorToSummaryDto(Mentor mentor) {
+        MentorSummaryDto mentorDto = new MentorSummaryDto();
+        mentorDto.setId(mentor.getId());
+        mentorDto.setFirstName(mentor.getFirstName());
+        mentorDto.setLastName(mentor.getLastName());
+        mentorDto.setTitle(mentor.getTitle());
+        mentorDto.setImageUrl(mentor.getImageUrl());
+        mentorDto.setSessionFee(mentor.getSessionFee());
+        return mentorDto;
     }
 }
